--- a/04-ms-marinebiology.qmd
+++ b/04-ms-marinebiology.qmd
@@ -1,211 +1,235 @@
-# MS Marine Biology
+# M.S. Marine Biology
 
-## Program Description 
+## Program Description
 
+### Degree Overview
+
+Students in the M.S. Marine Biology program develop a plan of study in consultation with their advisor and Master’s Thesis Committee. The program includes required core courses and competencies, thesis research, and professional development.
+
+Completion of at least **30 credits** is required, including research credits. Students develop a thesis proposal within the first year and complete thesis research (typically 6–10 credits). The degree is awarded when:
+
+- Thesis research results are deemed acceptable  
+- A formal public thesis presentation and defense has occurred  
+- The thesis is approved by the Thesis Committee and accepted by the Graduate School  
+
+All students are expected to present research publicly (including at the UNH Graduate Research Conference) and to gain teaching and/or mentoring experience.
+
+---
+
+## Credit Requirements
+
+The M.S. degree requires a minimum of **30 total credits**, including:
+
+- **6–10 credits** of thesis research (BIOL 899 – Master’s Thesis)  
+- Required coursework and competencies (outlined below)
+
+Up to **8 graduate credits** may be transferred from another institution if:
+- They were not counted toward another degree  
+- A grade of B or higher was earned  
+- The transfer is approved by the advisor, committee, and Graduate School  
+
+Students admitted through the **Accelerated Master’s (AM)** program may apply up to **12 credits** of prior upper-level UNH coursework, in accordance with AM policies.
+
+---
+
+## Required Courses and Competencies
+
+All M.S. Marine Biology students must complete the following:
+
+**Core Course**
+- **BIOL 901 – Introductory Graduate Seminar**  
+  Introduces program expectations, professional skills, and cohort building during the first semester.
+
+**Contemporary Techniques (2 courses)**
+- Two courses in contemporary research techniques  
+- At least **one must be quantitative**  
+- Course selection should be determined with the advisor or Graduate Program Coordinator  
+
+**Writing and Communication (1 course)**
+- May be fulfilled by prior graduate coursework (if approved) or by completing a graduate-level course  
+- Recommended courses often include:  
+  - BIOL 902 – Writing and Publishing Science  
+  - BIOL 950 – Scientific Communication  
+
+**Marine-Focused Course (1 course)**
+- May be fulfilled by prior approved graduate coursework or by completing a marine-focused graduate course  
+
+**Field Experience Requirement**
+- May be fulfilled through:  
+  - A graduate course with a substantial field component, or  
+  - Field research conducted as part of the thesis  
+
+---
 
 ## Learning Outcomes
 
+### Core Knowledge
+Demonstrate advanced knowledge within the subdiscipline relevant to the thesis research and general knowledge of marine biology.
+
+### Critical Thinking
+Critically evaluate qualitative and quantitative biological research to develop and test novel hypotheses.
+
+### Research
+Apply appropriate research methods and analytical techniques to address a meaningful gap in the field.
+
+### Communication
+Effectively communicate scientific concepts, methods, and findings to scientific audiences, stakeholders, and the public.
+
+### Professionalism
+Conduct research ethically and responsibly while engaging with the broader scientific community.
+
+---
 
 ## Program Requirements and Timeline
 
+### Thesis Committee
 
-### Committee
+The thesis committee typically consists of three members:
+- The advisor (chair)  
+- One additional DBS faculty member  
+- One member external to the department  
 
-Committees are comprised of three people: your advisor, another DBS faculty member, and someone external to the department.
+Students should work with their advisor to form a committee early in the program.
 
-### Thesis Proposal Guidelines
-PURPOSE 
-A thesis proposal states a problem to be investigated and describes how the research will be performed and reported. An approved thesis proposal documents an agreement between the student and the Marine Biology Graduate Program regarding the contents of a satisfactory thesis or dissertation. The preparation and writing of the thesis are of utmost importance and the student is expected to seek the guidance of their major professor and committee in the formation of the final thesis product. Adherence to the guidelines given here should assure the student that all information necessary for the satisfactory evaluation of the plans for master's or doctoral research will be included in the proposal. 
- 
+---
 
-FORMAT 
-The thesis proposal should present the required information concisely and clearly. The ability to describe concisely a research problem and methodology is one of the skills that the proposal process is designed to develop. Therefore, all thesis proposals are limited in length to the signature coversheet plus 20 or fewer double-spaced, single-sided or double-sided, numbered pages in a font size no smaller than 12 point. Proposals longer than this will not be accepted, however, appendices and references are not included in the 15-page limit, and must be numbered separately, using lower-case Roman numerals.  
+## Thesis Proposal
 
- 
+### Purpose
 
-CONTENTS 
-Thesis Proposals shall contain the following sections, presented in the order shown: 
+The thesis proposal defines the research problem, methods, and expected contributions. Approval of the proposal represents agreement between the student and program regarding the scope of an acceptable thesis.
 
- 
-A. Title of the Study 
-This is the title as the student conceives it at the time the proposal is submitted. This title must match the title on the thesis proposal approval form. As the research develops, minor rephrasing of the title may prove better suited to the work. In such cases, the most satisfactory one will be used for the thesis, but in no case will a title that deviates substantially from the one approved in the original proposal be approved unless a revised proposal with the new title has already been approved. Any title used must be consistent with the contents and subject of the thesis. 
+Students are expected to work closely with their advisor and committee when preparing the proposal.
 
- 
-B. Statement of the Problem 
-Limit the statement, if possible, to two or three sentences, and note in precise language exactly what is to be investigated. To amplify the statement, it is usually desirable to list: 
+### Format
 
-The scope or limitations of the problem; 
+- Maximum length: **20 double-spaced pages** (excluding references and appendices)  
+- Font size: 12 pt or larger  
+- Pages must be numbered  
+- Appendices and references should be numbered separately (Roman numerals)  
 
-Either one or more hypotheses the research seeks to test, or the objectives expected 
- 
+Proposals exceeding the page limit will not be accepted.
 
-C. Justification for and Significance of the Study 
-This section of the proposal includes: 
+### Required Sections
 
-A brief statement of the reason for the selection of the problem; 
+Proposals must include the following sections:
 
-The relation of the principal literature to the proposal; 
+1. **Title of the Study**  
+2. **Statement of the Problem**  
+   - Clear description of research question and scope  
+   - Objectives and/or hypotheses  
 
-An explanation of the study’s importance to the advancement of knowledge and its significance to the student. 
+3. **Justification and Significance**  
+   - Rationale for the study  
+   - Relationship to existing literature  
+   - Importance to the field and to the student  
 
-The problem selected should be substantial enough to constitute a good example of a 
-report of a scholarly investigation. At the PhD level the work should constitute a significant 
-increase in the pool of knowledge. 
+4. **Methodology or Procedures**  
+   May include research design, study system, sampling, data collection, and analytical methods.
 
- 
-D. Methodology or Procedures 
-This section describes the activities necessary to achieve the objectives. Methods should flow naturally from the problems and objectives, and may include depending on the field of study: 
+5. **Broader Impacts**  
+   - Intellectual merit  
+   - Contribution to knowledge  
+   - Relevance to scientific and broader communities  
 
-A research design;  
+6. **Literature Cited**
 
-General characteristics of the study population;  
+7. **Appendices (optional)**  
+   May include extended methods, preliminary data, or compliance approvals (e.g., IACUC/IRB).
 
-Location or setting in which the study will take place, calendar events in carrying out the study; Sampling design and procedures;  
+### Timing
 
-Data collection schedule;  
+- Typically submitted before or during the first semester of thesis research credits  
+- Must be submitted **at least one semester** before thesis defense  
+- Submit electronically with required approval form and signatures to the Program Coordinator  
 
-Brief description of instruments and tools for collecting data (validity, reliability, and pretesting of the data collecting instruments);  
+### Revised Proposals
 
-Definition of the most important terms and concepts;  
+If significant changes in topic or methodology occur, a revised proposal may be required. Students should consult their advisor and Program Coordinator.
 
-Data processing procedures and procedures of data analysis as appropriate. 
+---
 
- 
-E. Broader Impacts 
+## Annual Progress Review
 
-In this section the student should put the potential findings of their research into a broader context. Some questions to address in this section: 
+Each spring, students participate in an annual progress review with a representative of the Graduate Program Committee.
 
-What is the intellectual merit of doing this study?  
+**Goals of the review:**
+- Encourage reflection on progress and goals  
+- Support timely degree completion  
+- Provide mentorship and feedback  
+- Document progress and address concerns  
 
-How will the field of knowledge around your thesis topic be moved forward upon completion of your work? 
+**Preparation includes:**
+- Student progress report submitted to advisor and committee  
+- Advisor evaluation and summary of committee meeting  
+- Teaching feedback (if applicable)
 
-Why will the scientific community and society at large care about the outcomes of your research?  
+Failure to complete required progress review materials may result in a registration hold.
 
- 
-F. Literature Cited in the Proposal 
-It is important that students demonstrate that they have investigated the literature in framing the problem to be studied. 
+---
 
- 
+## Enrollment and Registration
 
-G. Appendix 
+Graduate students must maintain continuous enrollment in fall and spring through coursework, research registration, or continuing enrollment.
 
-Appendices can be listed after the Literature Cited section. In these appendices students should include information that is outside the scope of the thesis proposal. These items may include: 
+**Full-time status:**
+- 9+ credits, or  
+- Master’s research (GRAD 900), or  
+- Holding an assistantship (minimum 6 credits or GRAD 900)
 
-Extended methodologies 
+Students registered for continuing enrollment (GRAD 800) are not eligible for assistantships.
 
-Preliminary data 
+Students should consult their advisor regarding appropriate course load based on research, teaching, and field obligations.
 
-IACUC or IRB approval documents 
+---
 
- 
-TIMING 
-Thesis proposals should be submitted before substantial research has been completed. Typically, it should be submitted before or during the first semester in which the student registers for research credits. In all cases, however, the proposal must be submitted at least one semester before the semester in which the thesis itself is to be submitted and defended. For dissertations, the proposal must be submitted at least six (6) months prior to the defense. 
- 
+## Course and Credit Policies
 
-Students must submit an MBGP Proposal Approval form, with the required signatures, along with the proposal to the MBGP Coordinator. Please only send electronic copies of these documents. 
+**Graduate Courses**
+- 800- and 900-level courses count toward degree requirements  
+- Must be taken for a letter grade (if graded option available)
 
- 
+**700-Level Courses**
+- Up to 12 credits may count toward graduate degree (by petition)  
+- Must be outside the student’s program  
+- Must include additional graduate-level requirements  
 
-REVISED PROPOSALS 
-If, as the research proceeds, a significant change in subject or methodology becomes 
-necessary, a revised proposal should be submitted. Sometimes an abbreviated format can 
-be used for such changes. The student, in consultation with their major professor, should contact the MBGP Coordinator for further guidance. 
+**Undergraduate Courses (<700 level)**
+- May be taken if necessary for background preparation  
+- Do not count toward graduate degree credits  
 
+**Audited Courses**
+- Allowed with advisor and instructor approval  
+- Count toward enrollment requirements but not degree credits  
 
-### Credit Requirements
+---
 
-The M.S. degree requires completion of a minimum of 30 credits, 6-¬10 of which are earned for thesis research (BIOL 899 Master's Thesis ). 
+## Completing the Degree
 
-There is no specific credit requirement for the Ph.D., though students must meet curriculum requirements.
+Students are responsible for understanding all program and Graduate School requirements, including:
 
-Up to 8 graduate credits from another institution may be transferred, provided the credits were not counted toward another degree, and the course grade was a B or higher. Petitions requesting transfer credit must be supported by the advisor and graduate committee, and approved by the UNH Graduate School.
-Students admitted via the Accelerated Master's (AM) process may apply up to 12 credits of prior upper-level UNH coursework in accordance with AM policies.
+- Coursework and credit requirements  
+- Committee formation and paperwork  
+- Thesis formatting and submission requirements  
+- Defense scheduling and deadlines  
 
-The level of the courses taken to meet registration requirements is not specified. However, taking non-graduate classes does not move one towards degree completion, so taking undergraduate classes is not a common practice. A grad student cannot petition to take a 500-level course, however 500-level courses can be audited by graduate students with the cost of the course at the expense of the graduate student.
+A public seminar and thesis defense are required. The thesis must be provided to the committee at least **two weeks** before the defense.
 
-Students should discuss with their advisor and committee which courses will be most useful, and what course load makes sense in light of specific research and assistantship obligations (for example, an intense field season). 
+Final thesis submission must meet Graduate School deadlines and formatting requirements.
 
-How many credits to take, and financial implications: 
+---
 
-Graduate students are normally required to maintain continuous enrollment each Fall and Spring semester by registering for courses, research (Grad 900/BIOL 999), or continuing enrollment (Grad 800) (see below for distinctions). Students who don’t register for the Fall and Spring semesters will have their degree status discontinued.
+## Graduation
 
-Graduate students registered for 9 or more credits, Master's Continuing Research (Grad 900), or Doctoral Research (999) are classified as full-time students. Students holding assistantship appointments are also considered full time and must register for a minimum of 6 credits, or Master's Continuing Research (Grad 900). Students registered for Continuing Enrollment (GRAD 800) are not eligible to hold an appointment. For details, please see the Graduate School website (https://catalog.unh.edu/graduate/course- descriptions/grad).
+Students must file an intent to graduate and meet all Graduate School deadlines.  
+See Graduate School graduation information:  
+http://www.gradschool.unh.edu/graduation.php
 
-Students on assistantships (TA or RA) pay reduced mandatory fees (fee information: https://www.unh.edu/business-services/tuitgrad); this benefit applies no matter how many credits you’re taking. Tuition is commonly waived or covered for students on TA or RA appointments; however, mandatory fees remain the responsibility of the student. Students on assistantship in the spring semester can have tuition waived for summer courses offered by the Graduate School (GRAD prefix).
+---
 
-Students enrolled for more than 16 credits pay additional tuition based on the number of additional credits (https://www.unh.edu/business-services/tuitgrad). 
+## Student Rights and Policies
 
-Tuition and fee information from UNH Business Services is available at https://www.unh.edu/business-services/tuitgrad; Graduate School information about fees and financial support is at  https://catalog.unh.edu/graduate/general-information/fees-financial-support/ .
+Graduate students are subject to UNH policies on student rights and responsibilities.
 
-Which courses count:
-
-Graduate courses are numbered 800- or 900-level. Course descriptions can be found in the online Graduate Course Catalog (https://catalog.unh.edu/graduate/). If there is a graded option, graduate courses may not be taken Pass/Fail.
-
-Graduate credit for 700-level courses: 700-level courses are advanced undergraduate courses. In rare cases graduate degree students may petition to earn graduate credit for up to 12 credits in 700-­level courses, provided the credits are taken in a program other than the one in which the student is seeking the degree and provided such courses are approved by the student's adviser, graduate program coordinator, and the dean of the Graduate School. Such courses must be taken for a letter grade. Petitions must include what additional requirements or expectations will be required of the student to make the course a graduate level experience.  Petition requests must be made prior to enrolling in the course and are not guaranteed.  Petition forms are available at https://gradschool.unh.edu/academics/forms-policies.
-
-Undergraduate courses below 700-level: While taking non-graduate classes is generally discouraged, in some cases, graduate students may need background or training that can best be obtained by taking an upper-level undergraduate class, if no equivalent course is offered at the graduate level. Undergraduate level courses taken by graduate students are billed at the graduate rate, must be taken for a letter grade, and are subject to the Graduate School’s failing grade policy. Courses taken below the 700-level cannot count as graduate credit.
-
-Audits: Graduate students may audit courses with the approval of their advisor and the instructor. Credits for an audited course in which a graduate student is formally enrolled may be counted toward enrollment requirements for appointments and assistantships. (Note that tuition for audited courses is the same as for credit courses.)
-
-Graduate credit from another institution: Students can request to transfer up to 8 credits of graduate credit from another school, provided the credits were not counted toward another degree, and the grade was at least a B. The transfer request form is available at (https://gradschool.unh.edu/academics/forms-policies). 
-
-Where to find enrollment policy, course and registration information:
-• Graduate School enrollment policies and petition forms: https://gradschool.unh.edu/academics/forms-policies
-• the UNH Course Search Form searches all courses (grad and undergrad) (https://courses.unh.edu/)https://courses.unh.edu/
-• descriptions of graduate courses are in the online catalog https://catalog.unh.edu/graduate/
-• registration information and deadlines are posted at the Graduate School website https://gradschool.unh.edu/graduate-student-resources 
-
-
-### Research Proposal
-M.S. students must have their proposal approved by their advisor and Thesis Committee by the end of the second semester. 
-
-### Annual Progress Report and Review Meeting
-Each student will meet with a representative of the Graduate Program Committee in the spring semester to review progress and identify any concerns. The purpose of this meeting is to:
-
-1) Encourage the student to think critically about his/her own progress (or lack thereof) and goals for both the immediate and long-term future.
-
-2) Increase a sense of accountability on behalf of graduate students, and motivate students moving at a slow pace to increase their productivity and involvement in the program.
-
-3) Remind students that to be a truly successful graduate student, one should (ideally) demonstrate success in multiple areas (research, funding, teaching, service), and provide examples for how to do that.
-
-4) Provide a clear paper trail in case situations arise in which there is confusion or disagreement about a student's progress.
-
-The annual meeting also provides an opportunity for students to raise any concerns, and provide feedback about the program and their graduate experience.
-
-In preparation for progress review meetings, 
-• The student writes a report about their progress, and submits it to their advisor and committee for review and comments. This should occur in the first half of the spring semester. Instructions and template for the student report are available at the program website, or from the department. 
-• The advisor reviews and signs the student’s report, and then also fills out an evaluation describing his/her view of the student's progress, and including a summary of the most recent committee meeting – which should take place earlier in the same semester. Instructions and template for the advisor report are available at the program website, or from the department. Reports must be submitted at least one week before scheduled meetings, normally by mid-April.
-• Instructors for whom the student has served as a teaching assistant provide comments on their teaching. (If instructors have previously provided feedback as part of fellowship or other applications, they needn’t do so again.) Comments must be submitted at least one week before scheduled meetings, normally by mid-April.
-
-All reports and comments will be submitted to the designated departmental staff person, who will schedule a review meeting for each student with a member of the GPC (not including the advisor or, preferably, other members of the student’s committee), normally between mid-April and mid-May. 
-
-Following the meetings, comments and suggestions will be shared with the student and advisor, as well as the Program Coordinator. If there is material in the comments that is confidential or should not be shared, it may be withheld at the discretion of the Program Coordinator.
-
-Students who do not complete the review process by the specified date will have a hold placed on their registration by the Graduate School until they have resolved the situation.
-
-### Completing the Degree
-
-As a graduate student, you are responsible for knowing what you need to do to get your degree: your advisor and committee should offer guidance, but the primary responsibility is yours. Make sure you are thoroughly familiar with:
-
-• the program’s academic requirements (credits, courses, competencies);
-• necessary paperwork (committee nomination, Ph.D. candidacy, etc.);
-• thesis/dissertation format and filing requirements (set by the Graduate School);
-• format and scheduling procedures for qualifying exams and thesis/dissertation defense; and all relevant deadlines.
-
-If you have questions about what you need to do, or how to do it, consult your advisor, the Program Coordinator, and/or the UNH Graduate School. If there is information you think needs to be added or clarified in this handbook, please tell the Program Coordinator.
-
-For both the MS thesis and Ph.D. dissertation students are required to give a public, advertised seminar on the UNH campus, followed by a private examination by the student's committee, which may require revisions. The committee is responsible for assessing and approving the final version of the thesis. The committee should be provided with a complete copy of the thesis for review at least two full weeks before the defense.
-
-The student is responsible for transmitting necessary paperwork to the Graduate School, and fulfilling Graduate School requirements for electronic submission of the thesis, by the appropriate deadline.
-
-
-### Graduation
-
-The Graduate School website provides detailed information on graduation procedures, including deadlines, filing “intent to graduate” notification, submitting theses/dissertations to the Graduate School, and Commencement: http://www.gradschool.unh.edu/graduation.php
-
-
-### Student Rights and Key Policies
-
-UNH’s statement on Student Rights, Rules, and Responsibilities applies to graduate students as well as to undergraduates. It can be found at https://catalog.unh.edu/srrr/ 
-See Graduate School Catalog for general information, policies, and student rights: https://catalog.unh.edu/graduate/
-
+- Student Rights, Rules, and Responsibilities: https://catalog.unh.edu/srrr/  
+- Graduate School Catalog and policies: https://catalog.unh.edu/graduate/  
